--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,34 +60,47 @@ jobs:
                 Estado: ${{ fromJson(env.status).projectStatus.conditions[3].status == 'OK' && '✅ Exitoso' || '❌ Fallido' }}
                 Umbral de Error: ${{ fromJson(env.status).projectStatus.conditions[3].errorThreshold }} (Cuanto menor es mejor)
                 Valor Actual: ${{ fromJson(env.status).projectStatus.conditions[3].actualValue }}
-              # Agregar las métricas del proyecto aquí
-              {{#each fromJson(env.sonarqube_measures).components}}
-              - Archivo: {{this.path}}
-                Lenguaje: {{this.language}}
-                {{#each this.measures}}
-                  {{#if (eq this.metric "new_duplicated_lines_density")}}
-                  Métrica: Densidad de Líneas Duplicadas (Nuevo Código)
-                  Valor: {{this.period.value}}
-                  {{/if}}
-                  {{#if (eq this.metric "new_line_coverage")}}
-                  Métrica: Cobertura de Líneas (Nuevo Código)
-                  Valor: {{this.period.value}}
-                  {{/if}}
-                  {{#if (eq this.metric "code_smells")}}
-                  Métrica: Code Smells (Nuevo Código)
-                  Valor: {{this.value}}
-                  {{/if}}
-                  {{#if (eq this.metric "new_bugs")}}
-                  Métrica: Nuevos Bugs (Nuevo Código)
-                  Valor: {{this.period.value}}
-                  {{/if}}
-                  {{#if (eq this.metric "new_vulnerabilities")}}
-                  Métrica: Nuevas Vulnerabilidades (Nuevo Código)
-                  Valor: {{this.period.value}}
-                  {{/if}}
-                {{/each}}
-              {{/each}}
-              # Fin de las métricas del proyecto
+                
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[0].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[0].language) }}
+                Métrica: Densidad de Líneas Duplicadas (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[0].measures[0].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[0].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[0].language) }}
+                Métrica: Cobertura de Líneas (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[0].measures[1].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[0].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[0].language) }}
+                Métrica: Code Smells (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[0].measures[2].value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[0].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[0].language) }}
+                Métrica: Nuevos Bugs (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[0].measures[3].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[0].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[0].language) }}
+                Métrica: Nuevas Vulnerabilidades (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[0].measures[4].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[1].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[1].language) }}
+                Métrica: Densidad de Líneas Duplicadas (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[1].measures[0].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[1].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[1].language) }}
+                Métrica: Cobertura de Líneas (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[1].measures[1].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[1].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[1].language) }}
+                Métrica: Code Smells (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[1].measures[2].value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[1].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[1].language) }}
+                Métrica: Nuevos Bugs (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[1].measures[3].period.value) }}
+              - Archivo: ${{ fromJson(env.sonarqube_measures.components[1].path) }}
+                Lenguaje: ${{ fromJson(env.sonarqube_measures.components[1].language) }}
+                Métrica: Nuevas Vulnerabilidades (Nuevo Código) ✅
+                Valor: ${{ fromJson(env.sonarqube_measures.components[1].measures[4].period.value) }}
 
 
 
