--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,10 @@ jobs:
                 Umbral de Error: ${{ fromJson(env.status).projectStatus.conditions[2].errorThreshold }} (Cuanto menor es mejor)
                 Valor Actual: ${{ fromJson(env.status).projectStatus.conditions[2].actualValue }}
               - Métrica: ${ {fromJson(env.status).projectStatus.conditions[3].status == 'OK' && '✅' || '⚠️' } } Nueva Densidad de Líneas Duplicadas 📝
-                Estado: ${{ fromJson(env.status).projectStatus.conditions[3].status == 'OK' && fromJson(env.status).projectStatus.conditions[3].actualValue | float < fromJson(env.status).projectStatus.conditions[3].errorThreshold | float ? '✅ Exitoso' : '⚠️ Fallido' }}
+                Estado: ${{ fromJson(env.status).projectStatus.conditions[3].status == 'OK' && fromJson(env.status).projectStatus.conditions[3].actualValue < fromJson(env.status).projectStatus.conditions[3].errorThreshold ? '✅ Exitoso' : '⚠️ Fallido' }}
                 Umbral de Error: ${{ fromJson(env.status).projectStatus.conditions[3].errorThreshold }} (Cuanto menor es mejor)
                 Valor Actual: ${{ fromJson(env.status).projectStatus.conditions[3].actualValue }}
-                Emoji: ${{ fromJson(env.status).projectStatus.conditions[3].status == 'OK' && fromJson(env.status).projectStatus.conditions[3].actualValue | float < fromJson(env.status).projectStatus.conditions[3].errorThreshold | float ? '✅' : '⚠️' }}
+                Emoji: ${{ fromJson(env.status).projectStatus.conditions[3].status == 'OK' && fromJson(env.status).projectStatus.conditions[3].actualValue < fromJson(env.status).projectStatus.conditions[3].errorThreshold ? '✅' : '⚠️' }}
             
       - name: Calcular Puntaje del Análisis
         if: env.status && fromJson(env.status).projectStatus.status == 'OK'
